--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint": "eslint ./"
   },
   "dependencies": {
+    "bluebird": "^3.5.3",
     "body-parser": "^1.9.2",
     "express": "^4.10.1",
     "morgan": "^1.4.1",
